2005-12-23  Adam Schreiber  <sadam@clemson.edu>
    * configure.in:
    * data/seahorse.schemas.in:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-import.c
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * pixmaps/Makefile.am:
    * plugins/Makefile.am:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * plugins/applet/GNOME_SeahorseApplet.server.in.in:
    * plugins/applet/GNOME_SeahorseApplet.xml:
    * plugins/applet/Makefile.am:
    * plugins/applet/seahorse-applet.c:
    * plugins/applet/seahorse-applet.h:
    * plugins/applet/docs/Makefile.am
    * plugins/applet/docs/C/Makefile.am:
    * plugins/applet/docs/C/legal.xmlL
    * plugins/applet/docs/C/seahorse-applet.xml:
    * plugins/applet/docs/C/seahorse-applet-C.omf: Check in encryption applet
    (Bug #322615)
    
2005-12-15  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/Makefile.am:
    * bonobo/Makefile.am:
    * daemon/Makefile.am:
    * libcryptui/cryptui.h:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-key.h:
    * plugins/gedit/Makefile.am:
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus-ext/Makefile.am:
    * src/Makefile.am: Move SKEY_FLAGS_* to libcryptui, and use new flags 
    throughout seahorse (to guarantee consistency).
    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-key-list.c:
    * libcryptui/cryptui-key-list.h:
    * libcryptui/cryptui-key-store.c:
    * libcryptui/cryptui-key-store.h:
    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui-keyset.h:
    * libcryptui/cryptui-test-keyset.c: Support retrieving key flags. Only show 
    appropriate keys in key chooser. Support setting selection on chooser/list.
    
2005-12-14  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/Makefile.am:
    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-key-chooser.h:
    * libcryptui/cryptui-key-store.h: