@@ -1,0 +1,14 @@
+Makefile
+Makefile.in
+*.o
+*.gladep
+.deps
+.libs
+*.la
+*.lo
+*.bak
+*.a
+*.rej
+seahorse-applet
+GNOME_SeahorseApplet.server
+GNOME_SeahorseApplet.server.in
