@@ -1,0 +1,4 @@
+Makefile
+Makefile.in
+omf_timestamp
+seahorse-applet-C.omf.out
