@@ -1,3 +1,11 @@
+2005-12-27  Adam Schreiber  <sadam@clemson.edu>
+    * configure.in:
+    * plugins/applet/.cvsignore:
+    * plugins/applet/seahorse-applet.c:
+    * plugins/applet/seahorse-applet.h:
+    * plugins/applet/docs/.cvsignore:
+    * plugins/applet/docs/C/.cvsignore: Code cleanups
+
 2005-12-23  Adam Schreiber  <sadam@clemson.edu>
     * configure.in:
     * data/seahorse.schemas.in:
